--- a/index.html
+++ b/index.html
@@ -562,14 +562,13 @@
         <div class="footer-subscript">
           <p class="social-footer">ПОДПИШИСЬ НА РАССЫЛКУ</p>
           <form>
-            <label class="form-subscript">
-              <input
-                class="subscript-mail"
-                type="email"
-                name="email"
-                placeholder="E-mail"
-              />
-            </label>
+            <input
+              class="subscript-mail"
+              type="email"
+              name="email"
+              placeholder="E-mail"
+            />
+
             <button class="button-subscript" type="submit">
               Подписаться
               <svg class="icon-subscript" width="24px" height="24px">
@@ -592,7 +591,7 @@
           <h2 class="requst">Оставьте свои данные, мы вам перезвоним</h2>
           <label for="name" class="form-label">Имя</label>
           <div class="form-field">
-            <input class="form-input" type="text" name="name" id="neme" />
+            <input class="form-input" type="text" name="name" id="name" />
             <svg class="label-icon" width="12px" height="12px">
               <use href="./icon/sprite.svg#icon-man"></use>
             </svg>
